package edu.univalle.gadim.virtual_lab_platform.instances.api.type;

/**
 * Enumeration representing the possible statuses of an instance in the virtual lab platform.
 */
public enum InstanceStatus {
    CREATED,
    STARTING,
    RUNNING,
    STOPPED,
    EXPIRED,
    DELETED
}