@startuml VirtualLabInstancesModule

' Título del diagrama
title Módulo Instances - Virtual Lab Platform

' Definición de paquetes
package "api" {
    package "type" {
        interface Instance {
            +String id()
            +String name()
            +Optional<String> description()
            +String externalIp() //Container real id
            +String imageName()
            +String imageVersion()
            +String imageRegistry()
            +Integer cpuCores()
            +Integer memoryMb()
            +Integer storageMb()
            +Boolean gpuEnabled()
            +Integer exposedPort()
            +String internalIp()
            +LocalDateTime createdAt()
            +LocalDateTime expiresAt()
            +LocalDateTime startedAt()
            +Optional<LocalDateTime> stoppedAt()
            +Optional<LocalDateTime> deletedAt()
            +Optional<LocalDateTime> lastAccessedAt()
            +InstanceStatus status()
        }

        interface InstanceMetrics {
            +String id()
            +String instanceId()
            +Double currentCpuUsage()
            +Double currentMemoryUsage()
            +Double currentDiskUsage()
            +Double currentTimeUsage()
        }

        interface InstanceUser {
            +String id()
            +String instanceId()
            +String userId()
        }

        enum InstanceStatus {
            CREATED
            STARTING
            RUNNING
            STOPPED
            EXPIRED
            DELETED
        }
    }

    package "service" {
        interface InstanceService {}
        interface InstanceMetricsService {}
        interface InstanceUserService {}
    }
}

package "data" {
    package "model" {
        class InstanceJpa {
            String id
            String name
            String description
            String externalIp
            String imageName
            String imageVersion
            String imageRegistry
            Integer cpuCores
            Integer memoryMb
            Integer storageMb
            Boolean gpuEnabled
            Integer exposedPort
            String internalIp
            LocalDateTime createdAt
            LocalDateTime expiresAt
            LocalDateTime startedAt
            LocalDateTime stoppedAt
            LocalDateTime deletedAt
            LocalDateTime lastAccessedAt
            InstanceStatus status
        }
        class InstanceMetricsJpa {
            String id
            String instanceId
            Double currentCpuUsage
            Double currentMemoryUsage
            Double currentDiskUsage
            Double currentTimeUsage
        }
        class InstanceUserJpa {
            String id
            String instanceId
            String userId
        }
    }
    package "repository" {
        interface InstanceRepository {
            +Optional<InstanceJpa> findById(String id)
            +List<InstanceJpa> findAll()
            +List<InstanceJpa> findByUserId(String userId)
            +InstanceJpa save(InstanceJpa instance)
        }
        interface InstanceMetricsRepository {
            +List<InstanceMetricsJpa> findByInstanceId(String instanceId)
        }
        interface InstanceUserRepository {
            +List<InstanceUserJpa> findByUserId(String userId)
            +List<InstanceUserJpa> findByInstanceId(String instanceId)
        }
    }
}

package "operation" {
    class InstanceServiceOp {
        -InstanceRepository repository
        -InstanceUserRepository instanceUserRepository
        +createInstance(...)
        +startInstance(String id)
        +stopInstance(String id)
        +getInstanceById(String id)
        +getInstancesByUserId(String userId)
        +deleteInstance(String id)
        +checkOwnership(String instanceId, String userId)
    }
    class InstanceMetricsServiceOp {
        -InstanceMetricsRepository repository
        +getMetricsByInstanceId(String instanceId)
        +recordMetrics(String instanceId, ...)
    }
    class InstanceUserServiceOp {
        -InstanceUserRepository repository
        +assignUserToInstance(String userId, String instanceId)
        +getUsersByInstanceId(String instanceId)
        +removeUserFromInstance(String userId, String instanceId)
    }
    class VirtualizationServiceOp {
        +createContainer(...)
        +startContainer(String containerId)
        +stopContainer(String containerId)
        +deleteContainer(String containerId)
        +getContainerStatus(String containerId)
    }
}

package "web" {
    package "model" {
        class InstanceDto {
            +String id
            +String name
            +Optional<String> description
            +String imageName
            +String imageVersion
            +Integer cpuCores
            +Integer memoryMb
            +Integer storageMb
            +Boolean gpuEnabled
            +InstanceStatus status
            +static from(Instance instance): InstanceDto
        }
        class CreateInstanceRequest {
            +String name
            +Optional<String> description
            +String imageName
            +String imageVersion
            +Integer cpuCores
            +Integer memoryMb
            +Integer storageMb
            +Boolean gpuEnabled
        }
        class InstanceMetricsDto {
            +String id
            +String instanceId
            +Double currentCpuUsage
            +Double currentMemoryUsage
            +Double currentDiskUsage
            +Double currentTimeUsage
        }
    }
    package "controller" {
        class InstanceController {
            -InstanceService service
            +createInstance(CreateInstanceRequest request)
            +getInstanceById(String id)
            +getInstancesByUser()
            +startInstance(String id)
            +stopInstance(String id)
            +deleteInstance(String id)
        }
        class InstanceMetricsController {
            -InstanceMetricsService service
            +getMetricsByInstanceId(String instanceId)
        }
    }
}

package "config" {
    class ModuleConfig
}

' Relaciones
InstanceJpa ..|> Instance
InstanceMetricsJpa ..|> InstanceMetrics
InstanceUserJpa ..|> InstanceUser
InstanceServiceOp ..|> InstanceService
InstanceMetricsServiceOp ..|> InstanceMetricsService
InstanceUserServiceOp ..|> InstanceUserService
InstanceServiceOp --> InstanceRepository
InstanceServiceOp --> InstanceUserRepository
InstanceServiceOp --> VirtualizationServiceOp
InstanceMetricsServiceOp --> InstanceMetricsRepository
InstanceUserServiceOp --> InstanceUserRepository
InstanceController --> InstanceService
InstanceMetricsController --> InstanceMetricsService
InstanceDto ..> Instance
InstanceMetricsDto ..> InstanceMetrics
Instance --> InstanceStatus

@enduml